# financial-report-parser

./: .gitignore  README.md  agents.py  answers.json  gemini.py  langchain_agents.py  parse.py  pyproject.toml  results.json  transform.py  utils.py
assests/markdowns/: quartely-results-2024-zh_tcm27-94407.md
assets/: template.xlsx
assets/markdowns/: 113Q4 華碩財報(個體).md  TSMC 2024Q4 Unconsolidated Financial Statements_C.md  fin_202503071324328842.md
models/: cash_equivalents.py  exp_model.py  total_liabilities.py
src/: check.py  eval_results.py  gemini.py  gemini_client.py  gemini_main.py  gemini_transform.py  gui.py  main.py  parse.py  run_gui.py  transform.py  utils.py
src/models/: base.py  cash_equivalents.py  company_info.py  corporate_bond_payable.py  other_receivables_related_parties.py  prepayments.py  property_plant_equipment.py  receivables_related_parties.py  short_term_notes.py  table_locations.py  total.py  total_liabilities.py
