[project]
name = "financial-report-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "google-genai>=1.14.0",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.18",
    "llama-cloud-services>=0.6.21",
    "nltk>=3.9.1",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pandastable>=0.14.0",
    "pdfplumber>=0.11.6",
    "pikepdf>=9.7.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.11.3",
    "pymupdf>=1.25.5",
    "pypdf>=5.5.0",
    "pypdf2>=3.0.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "tksheet>=7.5.7",
    "tktable>=0.2",
    "xhtml2pdf>=0.2.17",
    "pdfkit>=1.0.0",
    "wkhtmltopdf>=0.2",
    "spire-doc>=13.4.6",
]
